--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/dev-yenin/drag-n-drop/issues"
   },
-  "homepage": "https://github.com/dev-yenin/drag-n-drop#readme"
+  "homepage": "https://github.com/dev-yenin/drag-n-drop#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.28.0",
+    "typescript": "^4.9.3"
+  }
 }
